# ghurni

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  cyrius.cyml
.github/workflows/: ci.yml  release.yml
benches/: benchmarks.rs  ghurni.bcyr
docs/architecture/: adr-001-naad-backend.md  adr-002-scope-boundaries.md  adr-003-deterministic-synthesis.md  adr-004-cyrius-port.md  overview.md
docs/development/: integration-guide.md  roadmap.md  state.md
docs/examples/: error_handling.cyr  logging.cyr  mixer_demo.cyr  simple_engine.cyr  vehicle_scene.cyr
docs/guides/: testing.md
examples/: error_handling.rs  logging.rs  mixer_demo.rs  simple_engine.rs  vehicle_scene.rs
rust-old/: Makefile
rust-old/benches/: benchmarks.rs
rust-old/src/: belt_drive.rs  clock.rs  dsp.rs  engine.rs  forced_induction.rs  gear.rs  lib.rs  mixer.rs  motor.rs
rust-old/tests/: integration.rs
scripts/: version-bump.sh
src/: belt_drive.cyr  chain_drive.cyr  chain_drive.rs  clock.cyr  clock.rs  differential.cyr  differential.rs  dsp.cyr  dsp.rs  engine.cyr  engine.rs  error.cyr  error.rs  event.cyr  event.rs  forced_induction.cyr  gear.cyr  gear.rs  lib.rs  logging.cyr  main.cyr  mixer.cyr  motor.cyr  motor.rs  presets.cyr  presets.rs  smooth.cyr  smooth.rs  traits.cyr  traits.rs  transmission.cyr  transmission.rs  turbine.cyr  turbine.rs
tests/: engine.tcyr  foundations.tcyr  integration.rs  mixer.tcyr  serde.tcyr  smoke_all.tcyr  synths.tcyr
